spices/thread-pool/tests/compile-fail/double-stop.tur
;; EXPECT: TUR-E0101  (linear Pool used after being consumed)
(defmodule cf-double-stop
  (import thread-pool/pool :refer [Pool pool-new pool-stop])
  (defn main [] : int
    (let [p (pool-new 2 (fn [x : int] : void nil))]
      (do (pool-stop p) (pool-stop p) 0))))   ;; consumed twice
